Implement AbilityMenu & Ability icons
- Added an Ability Menu for toggling abilities
- Implemented icons for abilities

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,8 @@
 ## Default configuration file for SimpleAbilities developed by sores ##
 ## Any time variables are based in seconds ##
 
+menu:
+  title: '&aAbilities Menu: '
 abilities:
   switcher:
     enabled: true
