--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -6,3 +6,5 @@ ABILITY_NOT_FOUND: '&cInvalid ability: &e%ability%&c, please try again.'
 ABILITY_DISABLED: '&cThat ability is currently disabled.'
 NOT_ON_COOLDOWN: '&c%name% does not have an active Ability Cooldown.'
 COOLDOWN_REMOVED: "&aYou have cleared %name%'s active Ability Cooldown."
+ABILITY_GIVEN: '&aYou have given %name% %amount% of %ability%.'
+ABILITY_GIVEN_ALL: '&aYou have given ALL players online %amount% of %ability%.'
